Fix the color contrast, and the page weight, and added hover effect to the images.

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -298,7 +298,7 @@ section button div {
 .sub-div {
   align-items: center;
   width: 100%;
-  background: #e98e30;
+  background: #484848;
   border-radius: 17px 17px 0 0;
 }
 .year-div {
@@ -314,12 +314,15 @@ section button div {
 .date-div {
   flex-direction: column;
   align-items: center;
+  background-color: #ffffff;
+  color: #000;
 }
 #day {
   padding: 0;
   margin: 0;
   bottom: 6px;
   font-size: 20px;
+  color: #000;
 }
 
 /*Weather*/
