--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -127,4 +127,8 @@
         width: inherit;
         height: inherit;
     }
+
+    picture img:hover {
+      box-shadow: 0 0 50px #000000;
+    }
 }
